--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
                     </div>
                     <div class="input-group mb-3" id="dvApiKey">
                         <span class="input-group-text" id="basic-addon-hostkey">Chave da API:</span>
-                        <input type="text" id="apikey" class="form-control"   placeholder="Digite a chave de acesso da API" aria-label="apikey"    aria-describedby="basic-addon-hostkey">
+                        <input type="text" id="apikey" class="form-control" placeholder="Digite a chave de acesso da API" aria-label="apikey"  aria-describedby="basic-addon-hostkey">
                     </div>
                     <button id="reconect" class="btn btn-outline-danger d-none" type="button" onclick="reconect()">Reconectar ao Servidor</button>
+
+                    <button id="reload" class="btn btn-outline-danger d-none" type="button" onclick="reload()">Reload ao Servidor</button>
 
                     <div id="copytoast" class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
                         <div class="d-flex">
